--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                                 <i class="fa fa-caret-down"></i>
                             </button>
                             <div class="dropdown-content">
-                                <a href="#">Black Tea</a>
-                                <a href="#">White Tea</a>
-                                <a href="#">Green Tea</a>
+                                <a href="/pages/tea/main-tea.html#Drinks">Black Tea</a>
+                                <a href="/pages/tea/main-tea.html#Drinks">White Tea</a>
+                                <a href="/pages/tea/main-tea.html#Drinks">Green Tea</a>
                             </div>
                         </div>
                         <div class="dropdown"> <!-- coffe -->
@@ -29,9 +29,9 @@
                                 <i class="fa fa-caret-down"></i>
                             </button>
                             <div class="dropdown-content">
-                                <a href="#">Latte</a>
-                                <a href="#">Cappuccino</a>
-                                <a href="#">Macchiato</a>
+                                <a href="/pages/coffe/main-coffe.html#Drinks">Latte</a>
+                                <a href="/pages/coffe/main-coffe.html#Drinks">Cappuccino</a>
+                                <a href="/pages/coffe/main-coffe.html#Drinks">Macchiato</a>
                             </div>
                         </div>
                         <div class="dropdown"><!-- coctails -->
@@ -39,9 +39,9 @@
                                 <i class="fa fa-caret-down"></i>
                             </button>
                             <div class="dropdown-content">
-                                <a href="#">Old Fashioned</a>
-                                <a href="#">Negroni</a>
-                                <a href="#">Daiquiri</a>
+                                <a href="/pages/coctails/main-coctails.html#Drinks">Old Fashioned</a>
+                                <a href="/pages/coctails/main-coctails.html#Drinks">Negroni</a>
+                                <a href="/pages/coctails/main-coctails.html#Drinks">Daiquiri</a>
                             </div>
                         </div>
                         <div class="dropdown"><!-- alcohol -->
@@ -49,9 +49,9 @@
                                 <i class="fa fa-caret-down"></i>
                             </button>
                             <div class="dropdown-content">
-                                <a href="#">Old Fashioned</a>
-                                <a href="#">Negroni</a>
-                                <a href="#">Daiquiri</a>
+                                <a href="/pages/alcohol/main-alcohol.html#Drinks">Old Fashioned</a>
+                                <a href="/pages/alcohol/main-alcohol.html#Drinks">Negroni</a>
+                                <a href="/pages/alcohol/main-alcohol.html#Drinks">Daiquiri</a>
                             </div>
                         </div>
                     </div>
@@ -89,13 +89,13 @@
         </section>
         <br>
         <section class="Drinks">
-            <h1>Що ми пропонуемо</h1>
+            <p class="Drinks" id="Drinks">Що ми пропонуемо</p>
             <div class="cards">
                 <div class="Tea">
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/img/sections_drinks/fff.png" alt="Avatar" style="width:300px;height:300px;">
+                                <img src="/img/sections_drinks/tea4.jpg" alt="Avatar" style="width:300px;height:300px;">
                             </div>
                             <div class="flip-card-back">
                                 <h2>Tea</h2>
@@ -109,7 +109,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/img/sections_drinks/fff.png" alt="Avatar" style="width:300px;height:300px;">
+                                <img src="/img/sections_drinks/coffe1.png" alt="Avatar" style="width:300px;height:300px;">
                             </div>
                             <div class="flip-card-back">
                                 <h2>Coffe</h2>
@@ -123,7 +123,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/img/sections_drinks/fff.png" alt="Avatar" style="width:300px;height:300px;">
+                                <img src="/img/sections_drinks/cocktails.jpg" alt="Avatar" style="width:300px;height:300px;">
                             </div>
                             <div class="flip-card-back">
                                 <h2>Coctails</h2>
@@ -137,7 +137,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/img/sections_drinks/fff.png" alt="Avatar" style="width:300px;height:300px;">
+                                <img src="/img/sections_drinks/alchol5.jpg" alt="Avatar" style="width:300px;height:300px;">
                             </div>
                             <div class="flip-card-back">
                                 <h2>Alcohol</h2>
@@ -154,12 +154,12 @@
                 <h2>Navigation</h2>
                 <br>
                 <ul>
-                    <li><a class="ahref" href="#">Home</a></li>
-                    <li><a class="ahref" href="#">News</a></li>
-                    <li><a class="ahref" href="#">Tea</a></li>
-                    <li><a class="ahref" href="#">Coffe</a></li>
-                    <li><a class="ahref" href="#">Coctails</a></li>
-                    <li><a class="ahref" href="#">Alcohol</a></li>
+                    <li><a class="ahref" href="/index.html">Home</a></li>
+                    <li><a class="ahref" href="/news.html">News</a></li>
+                    <li><a class="ahref" href="/pages/tea/main-tea.html">Tea</a></li>
+                    <li><a class="ahref" href="/pages/coffe/main-coffe.html">Coffe</a></li>
+                    <li><a class="ahref" href="/pages/coctails/main-coctails.html">Coctails</a></li>
+                    <li><a class="ahref" href="/pages/alcohol/main-alcohol.html">Alcohol</a></li>
                 </ul>
             </div>
             <div class="twoFooter">
@@ -177,6 +177,7 @@
             </div>
         </footer>
     </main>
+    <!-- <div class="lds-hourglass"></div> -->
     <script src="/script.js"></script>
 </body>
 
