--- a/pages/tea/main-tea.html
+++ b/pages/tea/main-tea.html
@@ -68,42 +68,39 @@
         <section class="ShortInfo">
             <h1>Коротка інформація про нас</h1>
             <div class="s1">
-                <p>Elf Drinks - це мережа барів, де ви можете насолоджуватися різноманітними напоями у чарівній
-                    атмосфері.<br>
-                    Наші бари пропонують широкий вибір коктейлів, вин, пива та безалкогольних напоїв, які задовольнять
-                    навіть найвибагливіших гостей.<br>
-                    Наші бармени-ельфи майстерно змішують інгредієнти, створюючи неповторні смакові враження, а
-                    обслуговування на рівні відповідає найвищим стандартам гостинності.<br>
-                    Незалежно від того, чи ви шукаєте місце для романтичного побачення, дружній вечір або просто
-                    відпочинок після важкого дня, Elf Drinks - ідеальне місце для вас.<br>
-                    Завітайте до нас і відчуйте справжню ельфійську чарівність у кожному ковтку!</p>
+                <p>
+                    Elf Drinks - це мережа барів, де ви можете насолоджуватися різноманітними напоями у чарівній атмосфері.
+                    Наші бари пропонують широкий вибір вишуканих чаїв, від класичних чорних та зелених сортів до екзотичних сумішей, які задовольнять навіть найвибагливіших гостей.
+                    Наші чайні майстри-ельфи майстерно заварюють чай, створюючи неповторні смакові враження, а обслуговування на рівні відповідає найвищим стандартам гостинності.
+                    Незалежно від того, чи ви шукаєте місце для тихого вечора з книгою, дружнього чаювання або відпочинку після важкого дня, Elf Drinks - ідеальне місце для вас.
+                    Завітайте до нас і відчуйте справжню ельфійську чарівність у кожній чашці!                    
+                </p>
                 <img src="/img/sections_img/bar_1.png" alt="s1-img" class="s1-img">
             </div>
             <div class="s2">
-                <p>Крім того, у наших барах ви зможете насолоджуватися не лише вишуканими напоями, але й приємною
-                    музикою та розважальними заходами.<br>
-                    Ми часто організовуємо вечори живої музики, дегустаційні події та тематичні вечірки, щоб кожен візит
-                    у Elf Drinks став для вас незабутнім враженням.<br>
-                    Наші заклади розташовані у зручних локаціях з привабливим інтер'єром та дружнім персоналом, завдяки
-                    чому ви завжди зможете відчути себе комфортно та зірваною з реальності.<br>
-                    Приходьте до Elf Drinks і дозвольте собі трошки магії у вашому житті!</p>
+                <p>
+                    Крім того, у наших барах ви зможете насолоджуватися не лише вишуканими чаями, але й приємною музикою та розважальними заходами.
+                    Ми часто організовуємо чайні церемонії, дегустаційні події та тематичні вечори, щоб кожен візит у Elf Drinks став для вас незабутнім враженням.
+                    Наші заклади розташовані у зручних локаціях з привабливим інтер'єром та дружнім персоналом, завдяки чому ви завжди зможете відчути себе комфортно та зірваною з реальності.
+                    Приходьте до Elf Drinks і дозвольте собі трошки магії у вашому житті!
+                </p>
                 <img src="/img/sections_img/bar_2.jpg" alt="s1-img" class="s2-img">
             </div>
         </section>
         <br>
         <section class="Drinks">
-            <h1>Що ми пропонуемо</h1>
+            <p class="Drinks" id="Drinks">Що ми пропонуемо</p>
             <div class="cards">
                 <div class="Tea">
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/img/sections_drinks/fff.png" alt="Avatar" style="width:300px;height:300px;">
+                                <img src="/img/sections_drinks/tea1.png" alt="Avatar" style="width:300px;height:300px;">
                             </div>
                             <div class="flip-card-back">
-                                <h2>Tea</h2>
-                                <p>Architect & Engineer</p>
-                                <p>We love that guy</p>
+                                <h2>Чорний чай</h2>
+                                <p>Нормалізує тиск, покращує роботу серця і судин. Знижує кількість холестерину в крові. Очищує організм від шлаків і токсинів, прискорює обмін речовин. Заспокоює у стресових ситуаціях.</p>
+                                <p>We love that tea</p>
                             </div>
                         </div>
                     </div>
@@ -112,12 +109,12 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/img/sections_drinks/fff.png" alt="Avatar" style="width:300px;height:300px;">
+                                <img src="/img/sections_drinks/tea2.png" alt="Avatar" style="width:300px;height:300px;">
                             </div>
                             <div class="flip-card-back">
-                                <h2>Coffe</h2>
-                                <p>Architect & Engineer</p>
-                                <p>We love that guy</p>
+                                <h2>Білий чай</h2>
+                                <p>Нормалізує тиск, покращує роботу серця і судин. Знижує кількість холестерину в крові. Очищує організм від шлаків і токсинів, прискорює обмін речовин. Заспокоює у стресових ситуаціях.</p>
+                                <p>We love that tea</p>
                             </div>
                         </div>
                     </div>
@@ -126,12 +123,12 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/img/sections_drinks/fff.png" alt="Avatar" style="width:300px;height:300px;">
+                                <img src="/img/sections_drinks/tea3.png" alt="Avatar" style="width:300px;height:300px;">
                             </div>
                             <div class="flip-card-back">
-                                <h2>Coctails</h2>
-                                <p>Architect & Engineer</p>
-                                <p>We love that guy</p>
+                                <h2>Чай Улун</h2>
+                                <p>М'який стимулюючий вплив на центральну нервову систему, підвищуючи мозкову активність та знімаючи розумову втому</p>
+                                <p>We love that tea</p>
                             </div>
                         </div>
                     </div>
@@ -140,12 +137,12 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/img/sections_drinks/fff.png" alt="Avatar" style="width:300px;height:300px;">
+                                <img src="/img/sections_drinks/tea4.jpg" alt="Avatar" style="width:300px;height:300px;">
                             </div>
                             <div class="flip-card-back">
-                                <h2>Alcohol</h2>
-                                <p>Architect & Engineer</p>
-                                <p>We love that guy</p>
+                                <h2>Жовтий чай</h2>
+                                <p>Перешкоджає розвитку карієсу; нормалізує роботу ендокринної залози, регулює гормональний фон; покращує пам'ять, сприяє концентрації уваги; допомагає при опіках: для цього використовують примочки з чаю.</p>
+                                <p>We love that tea</p>
                             </div>
                         </div>
                     </div>
@@ -155,43 +152,54 @@
         <section class="TabDrinks">
             <p class="tabMainText">6 основних видів чаю</p>
             <div class="tab">
-                <button class="tablinks" onclick="openTea(event, 'Black')">Чорний</button>
-                <button class="tablinks" onclick="openTea(event, 'White')">Білий</button>
-                <button class="tablinks" onclick="openTea(event, 'Green')">Злений</button>
-                <button class="tablinks" onclick="openTea(event, 'Yellow')">Жовтий</button>
-                <button class="tablinks" onclick="openTea(event, 'Oolong')">Улун</button>
-                <button class="tablinks" onclick="openTea(event, 'Puerh')">Пуєр</button>
+                <button class="tablinks" onclick="openTab(event, 'Black')">Чорний</button>
+                <button class="tablinks" onclick="openTab(event, 'White')">Білий</button>
+                <button class="tablinks" onclick="openTab(event, 'Green')">Злений</button>
+                <button class="tablinks" onclick="openTab(event, 'Yellow')">Жовтий</button>
+                <button class="tablinks" onclick="openTab(event, 'Oolong')">Улун</button>
+                <button class="tablinks" onclick="openTab(event, 'Puerh')">Пуєр</button>
             </div>
 
             <!-- Tab content -->
             <div id="Black" class="tabcontent">
-                <h3>Black Tea</h3>
-                <p>London is the capital city of England.</p>
+                <h3>Чорний чай</h3>
+                <p>Чорний чай проходить повну ферментацію, що надає йому насиченого смаку і темного кольору.
+                    Відомий своєю міцністю та багатством смакових ноток, чорний чай часто п'ють з молоком і цукром.
+                    Популярні сорти включають Дарджилінг, Ассам і Кенія.
+                    Він також містить більше кофеїну порівняно з іншими видами чаю, що робить його гарним вибором для ранкових напоїв.</p>
             </div>
 
             <div id="White" class="tabcontent">
-                <h3>White Tea</h3>
-                <p>Paris is the capital of France.</p>
+                <h3>Білий чай</h3>
+                <p>Білий чай виробляють з молодих бруньок і листочків чайного куща, які піддаються мінімальній обробці.
+                    Він відомий своїм легким, квітковим смаком і тонким ароматом.
+                    Білий чай, як правило, містить менше кофеїну, ніж інші види чаю, і багатий антиоксидантами.
+                    Серед популярних сортів – Бай Му Дань і Сінь Жень.</p>
             </div>
 
             <div id="Green" class="tabcontent">
-                <h3>Green Tea</h3>
-                <p>Tokyo is the capital of Japan.</p>
+                <h3>Зелений чай</h3>
+                <p>Зелений чай проходить мінімальну обробку, що дозволяє зберегти його природний зелений колір і ніжний смак.
+                    Він багатий антиоксидантами і має численні корисні властивості, включаючи підтримку метаболізму і зміцнення імунної системи.
+                    Серед відомих сортів – Сенча, Гьокуро і Матча.
+                    Зелений чай зазвичай заварюють при нижчих температурах, щоб уникнути гіркоти.</p>
             </div>
 
             <div id="Yellow" class="tabcontent">
-                <h3>Yellow Tea</h3>
-                <p>London is the capital city of England.</p>
+                <h3>Жовтий чай</h3>
+                <p>Жовтий чай — рідкісний і дорогий вид чаю, який проходить процес легкого ферментування та особливу техніку сушіння, що надає йому золотистого кольору.
+                    Він має м'який, солодкуватий смак і тонкий аромат.
+                    Жовтий чай цінується за свою делікатність і ніжність, а також за корисні властивості, подібні до зеленого чаю.</p>
             </div>
 
             <div id="Oolong" class="tabcontent">
-                <h3>Oolong Tea</h3>
-                <p>Paris is the capital of France.</p>
+                <h3>Чай улун</h3>
+                <p>Улун, також відомий як синьо-зелений чай, знаходиться між зеленим і чорним чаєм за ступенем ферментації. Улун має складний, багатогранний смак з фруктовими та квітковими нотками. Серед відомих сортів – Тайванський улун і Китайський Тегуанінь. Улун часто заварюють методом кількох настоїв, що дозволяє розкрити весь його ароматний потенціал.</p>
             </div>
 
             <div id="Puerh" class="tabcontent">
-                <h3>Pu-erh Tea</h3>
-                <p>Tokyo is the capital of Japan.</p>
+                <h3>Чай пуєр</h3>
+                <p>Пуер — постферментований чай, який може витримуватися роками, що надає йому насиченого, землистого смаку. Пуер поділяється на два основних типи: шен (сирий) і шу (варений). Шен пуер має світліший смак і може витримуватися десятиліттями, тоді як шу пуер проходить штучне старіння для отримання глибокого смаку за коротший час. Пуер відомий своїми властивостями очищення організму та підтримки травлення.</p>
             </div>
             <br>
         </section>
@@ -200,12 +208,12 @@
                 <h2>Navigation</h2>
                 <br>
                 <ul>
-                    <li><a class="ahref" href="#">Home</a></li>
-                    <li><a class="ahref" href="#">News</a></li>
-                    <li><a class="ahref" href="#">Tea</a></li>
-                    <li><a class="ahref" href="#">Coffe</a></li>
-                    <li><a class="ahref" href="#">Coctails</a></li>
-                    <li><a class="ahref" href="#">Alcohol</a></li>
+                    <li><a class="ahref" href="/index.html">Home</a></li>
+                    <li><a class="ahref" href="/news.html">News</a></li>
+                    <li><a class="ahref" href="/pages/tea/main-tea.html">Tea</a></li>
+                    <li><a class="ahref" href="/pages/coffe/main-coffe.html">Coffe</a></li>
+                    <li><a class="ahref" href="/pages/coctails/main-coctails.html">Coctails</a></li>
+                    <li><a class="ahref" href="/pages/alcohol/main-alcohol.html">Alcohol</a></li>
                 </ul>
             </div>
             <div class="twoFooter">
